<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="@drawable/layout_shape"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    style="@style/SetTextStyleTop"
                    android:text="@string/settings" />

                <View style="@style/LintStyle" />

                <View
                    style="@style/LintStyle"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/common_settings"
                    style="@style/SetTextStyle"
                    android:drawableLeft="@mipmap/ic_settings"
                    android:text="@string/settings_comm" />

                <View style="@style/LintStyle" />

                <TextView
                    android:id="@+id/wifi"
                    style="@style/SetTextStyle"
                    android:drawableLeft="@mipmap/ic_wifi"
                    android:text="@string/settings_wifi" />

                <View
                    style="@style/LintStyle"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_set_selector"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        style="@style/SetTextStyle"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableLeft="@mipmap/ic_clear_zero"
                        android:text="@string/set_clear_zero" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switchCompat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textOff="Off"
                        android:textOn="On"
                        app:showText="true" />
                </LinearLayout>

                <View style="@style/LintStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_set_selector"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/SetTextStyle"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableLeft="@mipmap/ic_me"
                        android:text="@string/set_me_pay" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switchMember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:checked="true"
                        android:textOff="Off"
                        android:textOn="On"
                        app:showText="true" />
                </LinearLayout>


                <View style="@style/LintStyle" />

                <TextView
                    android:id="@+id/update_psw"
                    style="@style/SetTextStyle"
                    android:drawableLeft="@mipmap/ic_check_update"
                    android:text="@string/set_psw" />

                <View style="@style/LintStyle" />

                <TextView
                    android:id="@+id/check_update"
                    style="@style/SetTextStyle"
                    android:drawableLeft="@mipmap/ic_update_psw"
                    android:text="@string/check_update" />

                <View style="@style/LintStyle" />

                <TextView
                    android:id="@+id/exit"
                    style="@style/SetTextStyle"
                    android:drawableLeft="@mipmap/ic_exit"
                    android:text="@string/exit" />

                <View style="@style/LintStyle" />

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/line" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/setting_title"
                    style="@style/SetTextStyleTop"
                    android:text="@string/settings_comm" />

                <View style="@style/LintStyle" />

                <View
                    style="@style/LintStyle"
                    android:layout_marginTop="15dp" />

                <include
                    android:id="@+id/view_comm_layout"
                    layout="@layout/view_comm_layout" />

                <include
                    android:id="@+id/view_update_layout"
                    layout="@layout/view_update_layout"
                    android:visibility="gone" />

                <include
                    android:id="@+id/view_check_layout"
                    layout="@layout/view_check_layout"
                    android:visibility="gone" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>