<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="4"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/currentCheckView"
                android:layout_width="10dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:clickable="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"/>

            <Button
                android:id="@+id/currentCheck"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/home_bottom_button_selector"
                android:text="@string/current_check"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />


            <Button
                android:id="@+id/checkBackView"
                android:layout_width="10dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/currentCheck"
                android:layout_marginTop="15dp"
                android:clickable="false"
                android:background="@color/colorGray" />

            <Button
                android:id="@+id/checkBack"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:layout_below="@+id/currentCheck"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/home_bottom_button_selector"
                android:text="@string/local_checkBack"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />


            <Button
                android:id="@+id/replease"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_above="@+id/queryRecord"
                android:background="@drawable/home_bottom_button_selector"
                android:text="@string/replease"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/queryRecord"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_above="@+id/setting"
                android:layout_marginTop="10dp"
                android:background="@drawable/home_bottom_button_selector"
                android:text="@string/queryRecord"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <Button
                android:id="@+id/setting"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/home_bottom_button_selector"
                android:text="@string/setting"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <include layout="@layout/view_item_title" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/scanNoMember"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/scan_pay_selector" />

        <Button
            android:id="@+id/scanMember"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/scan_pay_selector_m" />


    </LinearLayout>


</LinearLayout>