<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical">

    <include layout="@layout/toolbar_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <include layout="@layout/numkeyboard_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/login_block"
            android:divider="@drawable/line"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userName"
                    style="@style/LoginEditStyle"
                    android:layout_weight="1"
                    android:maxLength="12"
                    android:drawableLeft="@mipmap/ic_username"
                    android:drawableRight="@mipmap/hline"
                    android:gravity="center_vertical"
                    android:hint="@string/userName"
                    android:text="" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/line" />

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:scaleType="center"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:src="@mipmap/ic_down" />
            </LinearLayout>

            <TextView
                android:id="@+id/ip"
                style="@style/LoginEditStyle"
                android:drawableLeft="@mipmap/ic_ip"
                android:gravity="center_vertical"
                android:hint="@string/ip"
                android:text=""
                android:visibility="gone" />

            <TextView
                android:id="@+id/userNo"
                style="@style/LoginEditStyle"
                android:drawableLeft="@mipmap/ic_userno"
                android:gravity="center_vertical"
                android:hint="@string/userNo"
                android:inputType="number"
                android:text="" />


            <TextView
                android:id="@+id/userPsw"
                style="@style/LoginEditStyle"
                android:drawableLeft="@mipmap/ic_userpsw"
                android:gravity="center_vertical"
                android:hint="@string/userPsw"
                android:inputType="numberPassword"
                android:text="" />

            <Button
                android:id="@+id/login"
                style="@style/LoginButtonStyle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="登录" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>